--- a/gallery.html
+++ b/gallery.html
@@ -764,12 +764,12 @@
             <div class="col-md-4 wow fadeInUp" data-wow-delay=".75s">
               <div class="gallery-item">
                 <div class="gallery-img">
-                  <img src="assets/img/gallery/26.jpg" alt />
+                  <img src="assets/img/gallery/28.jpeg" alt />
                 </div>
                 <div class="gallery-content">
                   <a
                     class="popup-img gallery-link"
-                    href="assets/img/gallery/26.jpg"
+                    href="assets/img/gallery/28.jpeg"
                     ><i class="fal fa-plus"></i
                   ></a>
                 </div>
