--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                       <a
                         class="dropdown-item"
                         href="news-recent-events-achievements.html"
-                        >News, Recent Events & Achievements</a
+                        >News, Recent Events and Achievements</a
                       >
                     </li> -->
                     <li>
