--- a/index.html
+++ b/index.html
@@ -1108,6 +1108,48 @@
             <div class="col-md-4 wow fadeInUp" data-wow-delay=".25s">
               <div class="gallery-item">
                 <div class="gallery-img">
+                  <img src="/assets/img/gallery/environment_day_tree.jpg" alt />
+                </div>
+                <div class="gallery-content">
+                  <a
+                    class="popup-img gallery-link"
+                    href="/assets/img/gallery/environment_day_tree.jpg"
+                    ><i class="fal fa-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 wow fadeInUp" data-wow-delay=".25s">
+              <div class="gallery-item">
+                <div class="gallery-img">
+                  <img src="/assets/img/gallery/environment_day_class.jpg" alt />
+                </div>
+                <div class="gallery-content">
+                  <a
+                    class="popup-img gallery-link"
+                    href="/assets/img/gallery/environment_day_class.jpg"
+                    ><i class="fal fa-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 wow fadeInUp" data-wow-delay=".25s">
+              <div class="gallery-item">
+                <div class="gallery-img">
+                  <img src="/assets/img/gallery/environment_day_students.jpg" alt />
+                </div>
+                <div class="gallery-content">
+                  <a
+                    class="popup-img gallery-link"
+                    href="/assets/img/gallery/environment_day_students.jpg"
+                    ><i class="fal fa-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 wow fadeInUp" data-wow-delay=".25s">
+              <div class="gallery-item">
+                <div class="gallery-img">
                   <img src="/assets/img/gallery/11.jpeg" alt />
                 </div>
                 <div class="gallery-content">
@@ -2112,7 +2154,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 27-05-2025</span>
+                <span>Last updated on 06-06-2025</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
