--- a/404.html
+++ b/404.html
@@ -336,6 +336,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="news.html">News</a>
+                </li>
               </ul>
             </div>
           </div>
