--- a/news.html
+++ b/news.html
@@ -24,40 +24,81 @@
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <style>
+      /* News Card Styles */
       .news-card {
         transition: all 0.3s ease;
         height: 100%;
+        border-radius: 10px;
+        overflow: hidden;
+        border: none;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       }
       .news-card:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+        transform: translateY(-8px);
+        box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
+      }
+      .news-img-container {
+        height: 220px;
+        overflow: hidden;
+        position: relative;
       }
       .news-img {
-        height: 200px;
-        object-fit: cover;
+        height: 100%;
         width: 100%;
+        object-fit: cover;
+        transition: transform 0.5s ease;
+      }
+      .news-card:hover .news-img {
+        transform: scale(1.05);
       }
       .news-date {
         font-size: 14px;
-        color: #6c757d;
+        color: #125875;
+        font-weight: 500;
+      }
+      .news-title {
+        font-size: 18px;
+        font-weight: 600;
+        color: #333;
+        margin: 10px 0;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
       }
       .news-content {
+        color: #666;
+        font-size: 15px;
         display: -webkit-box;
         -webkit-line-clamp: 3;
         -webkit-box-orient: vertical;
         overflow: hidden;
         text-overflow: ellipsis;
+        margin-bottom: 15px;
       }
+      .news-badge {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        background: rgba(18, 88, 117, 0.9);
+        color: white;
+        padding: 5px 10px;
+        border-radius: 20px;
+        font-size: 12px;
+        font-weight: 500;
+      }
+
+      /* Loading Spinner */
       .loading-spinner {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 200px;
+        height: 300px;
       }
       .spinner {
-        width: 40px;
-        height: 40px;
-        border: 4px solid rgba(0, 0, 0, 0.1);
+        width: 50px;
+        height: 50px;
+        border: 5px solid rgba(18, 88, 117, 0.1);
         border-radius: 50%;
         border-top-color: #125875;
         animation: spin 1s ease-in-out infinite;
@@ -65,6 +106,32 @@
       @keyframes spin {
         to {
           transform: rotate(360deg);
+        }
+      }
+
+      /* Section Styling */
+      .news-area {
+        background: #f9f9f9;
+        padding: 80px 0;
+      }
+      .site-heading {
+        margin-bottom: 50px;
+      }
+      .site-title-tagline {
+        color: #125875;
+        font-weight: 600;
+      }
+      .site-title span {
+        color: #125875;
+      }
+
+      /* Responsive Adjustments */
+      @media (max-width: 767px) {
+        .news-img-container {
+          height: 180px;
+        }
+        .news-title {
+          font-size: 16px;
         }
       }
     </style>
@@ -183,13 +250,6 @@
                   <a class="nav-link active" href="/news.html">News</a>
                 </li>
               </ul>
-              <div class="nav-right">
-                <div class="nav-right-btn mt-2">
-                  <a href="login.html" class="theme-btn"
-                    ><span class="fal fa-pencil"></span>Apply Now</a
-                  >
-                </div>
-              </div>
             </div>
           </div>
         </nav>
@@ -228,15 +288,15 @@
       <div class="news-area py-120">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 mx-auto">
+            <div class="col-lg-8 mx-auto">
               <div class="site-heading text-center">
                 <span class="site-title-tagline"
                   ><i class="far fa-book-open-reader"></i> Latest Updates</span
                 >
-                <h2 class="site-title">College <span>News</span></h2>
-                <p>
-                  Stay updated with the latest happenings, events, and
-                  announcements from Malabar College of Pharmacy.
+                <h2 class="site-title">College <span>News & Events</span></h2>
+                <p class="lead">
+                  Stay informed about the latest happenings, achievements, and
+                  events at Malabar College of Pharmacy.
                 </p>
               </div>
             </div>
@@ -381,6 +441,11 @@
           return new Date(dateString).toLocaleDateString("en-US", options);
         }
 
+        // Function to create a news detail page URL
+        function getNewsDetailUrl(newsId) {
+          return `news-detail.html?id=${newsId}`;
+        }
+
         // Function to load news
         function loadNews() {
           const newsContainer = $("#news-container");
@@ -415,101 +480,57 @@
                   html += `
                     <div class="col-md-6 col-lg-4 mb-4">
                       <div class="card news-card h-100">
-                        <img src="${bannerImage}" class="card-img-top news-img" alt="${
+                        <a href="${getNewsDetailUrl(
+                          news.id
+                        )}" class="text-decoration-none">
+                          <div class="news-img-container">
+                            <img src="${bannerImage}" class="news-img" alt="${
                     news.subject
                   }" 
-                             onerror="this.src='assets/img/news-placeholder.jpg'">
-                        <div class="card-body">
-                          <span class="news-date">${formatDate(
-                            news.date
-                          )}</span>
-                          <h5 class="card-title mt-2">${news.subject}</h5>
-                          <p class="card-text news-content">${truncatedContent}</p>
-                        </div>
-                        <div class="card-footer bg-transparent border-top-0">
-                          <a href="#" class="btn btn-primary read-more-btn" data-id="${
-                            news.id
-                          }">Read More</a>
-                        </div>
+                                 onerror="this.src='assets/img/news-placeholder.jpg'">
+                            ${
+                              news.type_name
+                                ? `<span class="news-badge">${news.type_name}</span>`
+                                : ""
+                            }
+                          </div>
+                          <div class="card-body">
+                            <span class="news-date">${formatDate(
+                              news.date
+                            )}</span>
+                            <h5 class="news-title">${news.subject}</h5>
+                            <p class="news-content">${truncatedContent}</p>
+                          </div>
+                        </a>
                       </div>
                     </div>
                   `;
                 });
 
                 newsContainer.html(html);
-
-                // Add click handler for read more buttons
-                $(".read-more-btn").click(function (e) {
-                  e.preventDefault();
-                  const newsId = $(this).data("id");
-                  const newsItem = newsItems.find((item) => item.id == newsId);
-                  showNewsModal(newsItem);
-                });
               } else {
-                newsContainer.html(
-                  '<div class="col-12 text-center py-5"><h4>No news available at the moment. Please check back later.</h4></div>'
-                );
+                newsContainer.html(`
+                  <div class="col-12 text-center py-5">
+                    <div class="alert alert-info">
+                      <i class="fas fa-info-circle me-2"></i>
+                      No news available at the moment. Please check back later.
+                    </div>
+                  </div>
+                `);
               }
             },
             error: function (xhr, status, error) {
-              newsContainer.html(
-                '<div class="col-12 text-center py-5"><h4>Failed to load news. Please try again later.</h4></div>'
-              );
+              newsContainer.html(`
+                <div class="col-12 text-center py-5">
+                  <div class="alert alert-danger">
+                    <i class="fas fa-exclamation-triangle me-2"></i>
+                    Failed to load news. Please try again later.
+                  </div>
+                </div>
+              `);
               console.error("Error loading news:", error);
             },
           });
-        }
-
-        // Function to show news modal
-        function showNewsModal(newsItem) {
-          const bannerImage =
-            newsItem.news_banner ||
-            newsItem.picture ||
-            "assets/img/news-placeholder.jpg";
-          const formattedDate = formatDate(newsItem.date);
-
-          const modalHtml = `
-            <div class="modal fade" id="newsModal" tabindex="-1" aria-labelledby="newsModalLabel" aria-hidden="true">
-              <div class="modal-dialog modal-lg modal-dialog-centered">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="newsModalLabel">${
-                      newsItem.subject
-                    }</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body">
-                    <img src="${bannerImage}" class="img-fluid mb-3" alt="${
-            newsItem.subject
-          }"
-                         onerror="this.src='assets/img/news-placeholder.jpg'">
-                    <div class="d-flex justify-content-between mb-3">
-                      <span><strong>Date:</strong> ${formattedDate}</span>
-                      <span><strong>Posted By:</strong> ${
-                        newsItem.added_by_name || "Admin"
-                      }</span>
-                    </div>
-                    <div class="news-content">
-                      ${newsItem.content || "No content available."}
-                    </div>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          `;
-
-          // Remove existing modal if any
-          $("#newsModal").remove();
-
-          // Append new modal to body and show it
-          $("body").append(modalHtml);
-          const newsModal = new bootstrap.Modal(
-            document.getElementById("newsModal")
-          );
-          newsModal.show();
         }
 
         // Load news when page is ready
