--- a/news.html
+++ b/news.html
@@ -210,14 +210,14 @@
             <div class="collapse navbar-collapse" id="main_nav">
               <ul class="navbar-nav">
                 <li class="nav-item dropdown">
-                  <a class="nav-link active" href="/">Home</a>
+                  <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link" href="/about-us.html">About Us</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
-                    class="nav-link dropdown-toggle active"
+                    class="nav-link dropdown-toggle"
                     href=""
                     data-bs-toggle="dropdown"
                     >Admission</a
