--- a/news-detail.html
+++ b/news-detail.html
@@ -82,6 +82,7 @@
         overflow: hidden;
         transition: transform 0.3s;
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        cursor: pointer;
       }
       .attachment-item:hover {
         transform: translateY(-5px);
@@ -134,6 +135,81 @@
         padding: 30px;
         box-shadow: 0 2px 15px rgba(0, 0, 0, 0.05);
       }
+
+      /* Image Modal Styles */
+      .image-modal {
+        display: none;
+        position: fixed;
+        z-index: 1000;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.9);
+        overflow: auto;
+      }
+      .modal-content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+        position: relative;
+      }
+      .modal-image {
+        max-width: 90%;
+        max-height: 90%;
+        object-fit: contain;
+      }
+      .close-modal {
+        position: absolute;
+        top: 20px;
+        right: 30px;
+        color: #f1f1f1;
+        font-size: 40px;
+        font-weight: bold;
+        cursor: pointer;
+        transition: 0.3s;
+        z-index: 1001;
+      }
+      .close-modal:hover {
+        color: #bbb;
+      }
+      .modal-nav {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        color: white;
+        font-size: 30px;
+        font-weight: bold;
+        cursor: pointer;
+        padding: 10px 15px;
+        background-color: rgba(0, 0, 0, 0.5);
+        border-radius: 5px;
+        user-select: none;
+        z-index: 1001;
+      }
+      .prev-image {
+        left: 20px;
+      }
+      .next-image {
+        right: 20px;
+      }
+      .modal-nav:hover {
+        background-color: rgba(0, 0, 0, 0.8);
+      }
+      .image-caption {
+        position: absolute;
+        bottom: 20px;
+        left: 0;
+        width: 100%;
+        text-align: center;
+        color: white;
+        padding: 10px;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1001;
+      }
+
       @media (max-width: 767px) {
         .news-detail-header {
           padding: 40px 0 20px;
@@ -146,6 +222,14 @@
         }
         .news-content-container {
           padding: 20px;
+        }
+        .modal-image {
+          max-width: 95%;
+          max-height: 80%;
+        }
+        .modal-nav {
+          font-size: 20px;
+          padding: 5px 10px;
         }
       }
       /* Loading spinner styles */
@@ -340,13 +424,10 @@
 
               <div id="attachments-section" style="display: none">
                 <div class="attachments-section">
-                  <h4 class="attachments-header">Image Attachments</h4>
                   <div
                     class="image-attachments"
                     id="image-attachments-container"
                   ></div>
-
-                  <h4 class="attachments-header">File Attachments</h4>
                   <div
                     class="file-attachments"
                     id="file-attachments-container"
@@ -362,6 +443,17 @@
         </div>
       </div>
     </main>
+
+    <!-- Image Modal -->
+    <div id="imageModal" class="image-modal">
+      <span class="close-modal">&times;</span>
+      <div class="modal-content">
+        <span class="modal-nav prev-image">&#10094;</span>
+        <img class="modal-image" id="modalImage" />
+        <span class="modal-nav next-image">&#10095;</span>
+        <div class="image-caption" id="imageCaption"></div>
+      </div>
+    </div>
 
     <footer class="footer-area">
       <!-- Footer content same as news.html -->
@@ -383,6 +475,10 @@
           return;
         }
 
+        // Variables for image modal functionality
+        let currentImageIndex = 0;
+        let imageAttachments = [];
+
         // Show loading state
         function showLoading() {
           $("#news-content").html(`
@@ -401,6 +497,78 @@
           `);
         }
 
+        // Image Modal Functions
+        function openImageModal(index) {
+          currentImageIndex = index;
+          const modal = document.getElementById("imageModal");
+          const modalImg = document.getElementById("modalImage");
+          const captionText = document.getElementById("imageCaption");
+
+          modal.style.display = "block";
+          modalImg.src = imageAttachments[index].src;
+          captionText.innerHTML =
+            imageAttachments[index].alt || "Attachment Image";
+
+          // Prevent body scroll when modal is open
+          document.body.style.overflow = "hidden";
+        }
+
+        function closeModal() {
+          const modal = document.getElementById("imageModal");
+          modal.style.display = "none";
+          // Restore body scroll
+          document.body.style.overflow = "auto";
+        }
+
+        function navigateImage(direction) {
+          currentImageIndex += direction;
+
+          // Circular navigation
+          if (currentImageIndex >= imageAttachments.length) {
+            currentImageIndex = 0;
+          } else if (currentImageIndex < 0) {
+            currentImageIndex = imageAttachments.length - 1;
+          }
+
+          const modalImg = document.getElementById("modalImage");
+          const captionText = document.getElementById("imageCaption");
+
+          modalImg.src = imageAttachments[currentImageIndex].src;
+          captionText.innerHTML =
+            imageAttachments[currentImageIndex].alt || "Attachment Image";
+        }
+
+        // Set up modal event listeners
+        $(document).on("click", ".close-modal", closeModal);
+        $(document).on("click", ".prev-image", function () {
+          navigateImage(-1);
+        });
+        $(document).on("click", ".next-image", function () {
+          navigateImage(1);
+        });
+
+        // Close modal when clicking outside the image content
+        $(document).on("click", "#imageModal", function (event) {
+          // Check if the click is on the modal background (not on the image or navigation elements)
+          if ($(event.target).closest(".modal-content").length === 0) {
+            closeModal();
+          }
+        });
+
+        // Keyboard navigation
+        $(document).on("keydown", function (event) {
+          const modal = document.getElementById("imageModal");
+          if (modal.style.display === "block") {
+            if (event.key === "Escape") {
+              closeModal();
+            } else if (event.key === "ArrowLeft") {
+              navigateImage(-1);
+            } else if (event.key === "ArrowRight") {
+              navigateImage(1);
+            }
+          }
+        });
+
         // Load specific news item directly
         function loadNewsDetail() {
           showLoading();
@@ -415,7 +583,6 @@
           }, 1000);
 
           // In production, use this AJAX call instead:
-
           $.ajax({
             url: `https://conext.in/news/api/single-news-article/${newsId}/`,
             method: "GET",
@@ -476,20 +643,36 @@
           const fileAttachmentsContainer = $("#file-attachments-container");
           imageAttachmentsContainer.empty();
           fileAttachmentsContainer.empty();
+          imageAttachments = []; // Reset the image attachments array
 
           if (newsItem.attachments && newsItem.attachments.length > 0) {
             let hasImageAttachments = false;
             let hasFileAttachments = false;
 
-            newsItem.attachments.forEach((attachment) => {
+            newsItem.attachments.forEach((attachment, index) => {
               if (attachment.picture) {
                 hasImageAttachments = true;
-                imageAttachmentsContainer.append(`
-                  <a href="${attachment.picture}" target="_blank" class="attachment-item">
-                    <img src="${attachment.picture}" class="attachment-img" alt="Attachment" 
-                         onerror="this.src='assets/img/news-placeholder.jpg'">
-                  </a>
-                `);
+
+                // Store image data for modal
+                imageAttachments.push({
+                  src: attachment.picture,
+                  alt: index + 1 + " / " + newsItem.attachments.length,
+                });
+
+                // Create clickable image element
+                const imgElement = document.createElement("div");
+                imgElement.className = "attachment-item";
+                imgElement.innerHTML = `
+                  <img src="${attachment.picture}" class="attachment-img" alt="Attachment" 
+                       onerror="this.src='assets/img/news-placeholder.jpg'">
+                `;
+
+                // Add click event to open modal
+                imgElement.addEventListener("click", function () {
+                  openImageModal(index);
+                });
+
+                imageAttachmentsContainer.append(imgElement);
               } else if (attachment.doc) {
                 hasFileAttachments = true;
                 const fileExt = attachment.doc.split(".").pop().toLowerCase();
