--- a/index.html
+++ b/index.html
@@ -330,11 +330,11 @@
                     >Admission & Fee</a
                   >
                   <ul class="dropdown-menu fade-down">
-                    <li>
-                      <a class="dropdown-item" href="prospectus2024.html"
+                    <!-- <li>
+                      <a class="dropdown-item" href="prospectus2025.html"
                         >Prospectus</a
                       >
-                    </li>
+                    </li> -->
                     <li>
                       <a class="dropdown-item" href="admission.html"
                         >Admission Process And Guidelines</a
@@ -625,19 +625,25 @@
         </div>
       </div> -->
 
-      <!-- <div class="marquee">
+      <div class="marquee">
         <a href="admission.html">
           Click here to Learn About Admission and Important Dates! 
         </a>
-        <a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: red; text-decoration: none; font-weight: bold;">
+        <a href="admission.html" style="color: red; text-decoration: none; font-weight: bold;">
+          B.Pharm 2025-26 Admission: Notification Published on 23.07.2025
+        </a>
+        <!-- <a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: red; text-decoration: none; font-weight: bold;">
           Second Allotment List Published!
         </a>
         <span style="color: black; font-weight: bold;">&nbsp; | &nbsp;</span>
         <a href="/assets/pdf/JOINED STUDENT LIST OF SECOND ALLOTMENT.pdf" style="color: red; text-decoration: none; font-weight: bold;">
           Joined Students List of Second Allotment published!
-        </a>
+        </a> -->
       </div>
       <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
+        <p style="margin: 0; color: #333;"><strong>B.Pharm 2025-26 Admission: Notification Published!</strong> <a href="admission.html" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
+      </div>
+      <!-- <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
         <p style="margin: 0; color: #333;"><strong>Second Allotment List Published!</strong> <a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
       </div>
       <div class="notification-bar" style="margin-top: 2px; background-color: #f2f2f2; padding: 10px; text-align: center;">
@@ -2282,7 +2288,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 06-06-2025</span>
+                <span>Last updated on 23-07-2025</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
